--- a/index.html
+++ b/index.html
@@ -4,10 +4,115 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
-        body{ margin: 0; overflow: hidden;}
+        body{ 
+            margin: 0; 
+            overflow: hidden;
+            }
+        #info{
+            position: absolute;
+            color: beige;
+            opacity: 0;
+        }
+        #btn{
+            position: absolute;
+            top : 100px;
+            cursor: auto;
+            opacity: 0;
+        }
+
+        @keyframes ldio-a015a9to0j-1 {
+        0% { transform: rotate(0deg) }
+       50% { transform: rotate(-45deg) }
+      100% { transform: rotate(0deg) }
+    }
+    @keyframes ldio-a015a9to0j-2 {
+        0% { transform: rotate(180deg) }
+       50% { transform: rotate(225deg) }
+      100% { transform: rotate(180deg) }
+    }
+    /* .ldio-a015a9to0j > div:nth-child(2) {
+      transform: translate(-15px,0);
+    } */
+    .ldio-a015a9to0j > div:nth-child(2) div {
+      position: absolute;
+      top: 43%;
+      left: 50%;
+      width: 120px;
+      height: 60px;
+      border-radius: 120px 120px 0 0;
+      background: #f8b26a;
+      animation: ldio-a015a9to0j-1 1s linear infinite;
+      transform-origin: 60px 60px
+    }
+    .ldio-a015a9to0j > div:nth-child(2) div:nth-child(2) {
+      animation: ldio-a015a9to0j-2 1s linear infinite
+    }
+    .ldio-a015a9to0j > div:nth-child(2) div:nth-child(3) {
+      transform: rotate(-90deg);
+      animation: none;
+    }@keyframes ldio-a015a9to0j-3 {
+        0% { transform: translate(190px,0); opacity: 0 }
+       20% { opacity: 1 }
+      100% { transform: translate(70px,0); opacity: 1 }
+    }
+    .ldio-a015a9to0j > div:nth-child(1) {
+      display: block;
+    }
+    .ldio-a015a9to0j > div:nth-child(1) div {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: #e15b64;
+      animation: ldio-a015a9to0j-3 1s linear infinite
+    }
+    .ldio-a015a9to0j > div:nth-child(1) div:nth-child(1) { animation-delay: -0.67s }
+    .ldio-a015a9to0j > div:nth-child(1) div:nth-child(2) { animation-delay: -0.33s }
+    .ldio-a015a9to0j > div:nth-child(1) div:nth-child(3) { animation-delay: 0s }
+    .loadingio-spinner-bean-eater-qcbt2x0zis {
+        position: absolute;
+      width: 100%;
+      height: 100%;
+      display: inline-block;
+      overflow: hidden;
+      /* background: #ffffff; */
+    }
+    .ldio-a015a9to0j {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform: translateZ(0) scale(1);
+      backface-visibility: hidden;
+      transform-origin: 0 0; /* see note above */
+
+    }
+    .ldio-a015a9to0j div { box-sizing: content-box; }
+
+    #loadingText{
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        color: beige;
+        font-size: 48px;
+    }
+
+
     </style>
 </head>
 <body>
+
+    <div id = "info">wooow</div>
+    
+    
+    <div id="loadingText">Loading</div>
+    <div class="loadingio-spinner-bean-eater-qcbt2x0zis" id="loader"><div class="ldio-a015a9to0j">
+        <div><div></div><div></div><div></div></div><div><div></div><div></div><div></div></div>
+        </div></div>
+
+        <button id="btn" disabled onclick="htmlButton()">START</button>
+
     <script src="js/three.min.js"></script>
     <script src="js/MTLLoader.js"></script>
     <script src="js/OBJLoader.js"></script>
