First Complete Version

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Rishabh's Portfolio</title>
+    <link rel="icon" href="./models/images/brick.png" type="image/x-icon">
     <style>
         body{ 
             margin: 0; 
