--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body{ 
             margin: 0; 
             overflow: hidden;
+            background: #20222c;
             }
 
         @keyframes ldio-a015a9to0j-1 {
